# cl_report_bot

./: .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt
src/: alert_service.py  create_mks.py  entities.py  enums.py  filter_mk.py  get_datetime.py  get_mk_without_sales.py  get_sales_data.py  get_vending_machines.py  kit_api.py  models.py  telegram_client.py
src_V2/domain/repositories/: vending_machine_repository.py
srс/: app.py  telegram_bot.py
srс/controllers/: sales_report_controller.py
srс/domain/entities/: no_sales_report.py  project_datetime.py  sale.py  sales_analyze_report.py  vending_machine.py
srс/domain/ports/: sales_repository.py  vending_machine_repository.py
srс/domain/value_objects/: no_sales_item.py  sales_analyze_item.py
srс/infra/: app_logger.py  kit_api_sales_repository.py  kit_api_vending_machine_repository.py  telegram_client.py
srс/services/: no_sales_report_message_service.py  no_sales_report_service.py  sales_analyze_service.py  sales_report_message_service.py
srс/use_cases/: no_sales_reports.py
