[project]
name = "sales-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "python-dotenv>=1.0.1",
    "pydantic>=2.11.7",
    "kit-api @ git+https://github.com/lok101/kit-vending-api.git",
    "aiogram>=3.24.0",
    "beartype>=0.22.9",
    "tzlocal>=5.3.1",
]
